--- a/templates/seasons2.html
+++ b/templates/seasons2.html
@@ -1,10 +1,10 @@
 
 <link rel="stylesheet" href="/static/style.css">
 
-<h1> Michigan Men's Basketball </h1>
+<h1> Michigan Men's Football </h1>
 
 
-<form action="/bball" method="POST">
+<form action="/fball" method="POST">
     Sort By:<br/>
     <input type="radio" name="sortby" value="year"/> Year <br/>
     <input type="radio" name="sortby" value="wins"/> Wins <br/>
